@@ -1,5 +1,12 @@
 2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
+	Decruft: Elide internal function `make_res'.
+
+	* libpq.c (make_res): Delete func;
+	convert all callers to use `res_box (result)' instead.
+
+2008-07-16  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
 	Use guile.m4 facilities from Guile 1.4.1.118.
 
 	* Makefile.am (install-data-hook): Use $(mkmodcat).
